--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CS A Associates - CA Admin Panel</title>
-    <meta name="description" content="Professional Chartered Accountant Admin Panel for managing customers, invoices, and financial operations" />
+    <meta
+      name="description"
+      content="Professional Chartered Accountant Admin Panel for managing customers, invoices, and financial operations"
+    />
     <meta name="author" content="CS A Associates" />
 
     <meta property="og:title" content="CS A Associates - CA Admin Panel" />
-    <meta property="og:description" content="Professional CA management system for comprehensive financial operations" />
+    <meta
+      property="og:description"
+      content="Professional CA management system for comprehensive financial operations"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://shivanshu.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@shivanshu" />
+    <meta
+      name="twitter:image"
+      content="https://shivanshu.dev/opengraph-image-p98pqg.png"
+    />
   </head>
 
   <body>
